--- a/src/main/resources/html-static-test/test-cords.html
+++ b/src/main/resources/html-static-test/test-cords.html
@@ -1,4 +1,14 @@
 <html>
+
+<head>
+	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="/favicon.ico" />
+	<meta name="description" content="Estudando...">
+	<meta name="keywords" content="HTML, CSS, JavaScript, Java, Spring Boot">
+	<meta name="author" content="Welyqrson B Amaral">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <body>
 
 	<button onclick="buscar()">Buscar categorias</button>
@@ -11,7 +21,7 @@
 		function buscar() {
 			var req = new XMLHttpRequest();
 			req.addEventListener("load", printResponse);
-			req.open("GET", "http://localhost:8080/categorias");
+			req.open("GET", "http://192.168.5.235:8080/categorias");
 			req.setRequestHeader('HEADER1', 'VALOR');
 
 			req.send();
@@ -33,4 +43,5 @@
  
     -->
 </body>
+
 </html>
