--- a/src/main/resources/html-static-test/test-obterToken.html
+++ b/src/main/resources/html-static-test/test-obterToken.html
@@ -12,6 +12,9 @@
 <body>
 
 	<button onclick="buscar()">Buscar categorias</button>
+	<br />
+	<br />
+	<button onclick="enviar()">Buscar access token</button>
 
 	<script>
 		function printResponse() {
@@ -22,10 +25,18 @@
 			var req = new XMLHttpRequest();
 			req.addEventListener("load", printResponse);
 			req.open("GET", "http://localhost:8080/categorias");
-			req.setRequestHeader('HEADER1', 'VALOR');
 
 			req.send();
 		}
+		function enviar() {
+			var req = new XMLHttpRequest();
+			req.addEventListener("load", printResponse);
+			req.open("POST", "http://localhost:8080/oauth/token");
+			req.setRequestHeader("Authorization", "Basic YW5ndWxhcjpAbmd1bEByMA==");
+			req.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
+
+			req.send("client_id=angular&username=admin&password=admin&grant_type=password");
+		}		
 	</script>
 
 	<!-- 
